# LinCheckROOT

./: .gitignore  CMakeLists.txt  COMPLETION_SUMMARY.md  INDEX.md  INFO.sh  PROJECT_SUMMARY.md  QUICK_REFERENCE.sh  QUICK_START.md  README.md  RELEASE_NOTES.md  SAFE_ACTIONS.md  STATUS_REPORT.md  TECHNICAL.md  USER_GUIDE.md  VERIFICATION_CHECKLIST.md  build.sh  install.sh  lincheckroot  test_safe_actions.sh  v2.1_IMPLEMENTATION.md
data/: lineage_devices.json  style.css
include/: adb_abstraction.h  bootloader_analyzer.h  config_manager.h  device_inspector.h  gui_main.h  rom_compatibility.h  root_analyzer.h
include/actions/: reboot.hpp
include/adb/: adb_client.hpp
include/analyzer/: analyzers.hpp
include/device/: device_info.hpp
include/ui/: dialogs.hpp
src/: adb_abstraction.cpp  bootloader_analyzer.cpp  config_manager.cpp  device_inspector.cpp  gui_main.cpp  main.cpp  rom_compatibility.cpp  root_analyzer.cpp
src/actions/: reboot.cpp
src/adb/: adb_client.cpp
src/analyzer/: analyzers.cpp
src/device/: device_info.cpp
src/ui/: dialogs.cpp
